[package]
name = "seame"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]


[dependencies]
migration = { path = "migration" }
# entity = { path = "entity" }

axum = { version = "0.7.5" }
sea-orm = { version = "0.12.15", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	# "sqlx-postgres",
] }
tokio = { version = "1.39.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.204" }
chrono = "0.4.38"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = { version = "0.15.7" }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
serde_json = "1.0.120"
