[package]
name = "seame"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]


[dependencies]
migration = { path = "migration" }
# entity = { path = "entity" }

axum = { version = "0.7.7" }
sea-orm = { version = "1.0.1", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	# "sqlx-postgres",
] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.210" }
chrono = "0.4.38"
tower-http = { version = "0.6.1", features = ["cors"] }
dotenvy = { version = "0.15.7" }
jsonwebtoken = "9.3.0"
serde_json = "1.0.128"
bcrypt = "0.15.1"
